# video_memories_assistant

./: .gitignore  PROJECT_PLAN.md  pyproject.toml
video_memories_assistant/: cli.py
